--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,1 +1,113 @@
+body {
+	background: url("../img/crowd.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 900px;
+}
+
+.row {
+	border: 1px solid #d1d3d8;
+	margin: 17%;
+	margin-top: 8%;
+	text-align: center;
+	/*box-shadow: .5px .5px 1.5px 1.5px #d8dddc;*/
+	padding: 2% 2% 5% 2%;
+	background-color: #fff;
+}
+
+
+/*--------------------------
+|
+|		LOGINBOX
+|----------------------------
+*/
+/*box with log in inputs*/
+.login {
+	margin-top: 2%;
+	margin-bottom: 10%;
+	/*border: 1px solid red;*/
+	padding: 1%;
+}
+
+/*username input for login*/
+#username {
+	width: 32%;
+	display: inline-block;
+	font-family: 'Raleway', sans-serif;
+}
+
+/*password input for login*/
+#password {
+	width: 32%;
+	display: inline-block;
+	font-family: 'Raleway', sans-serif;
+}
+
+.button1 {
+	width: 32%;
+	display: inline-block;
+	background-color: #6885cd;
+	color: #fff;
+	font-family: 'Raleway', sans-serif;
+}
+
+/*--------------------------
+|
+|		REGISTERBOX
+|----------------------------
+*/
+/*box with register inputs*/
+.register {
+	text-align: center;
+	/*border: 1px solid red;*/
+}
+
+/*username for register*/
+#regname {
+	display: block;
+	text-align: center;
+	width: 65%;
+	margin: auto;
+	margin-bottom: 3%;
+	margin-top: 3%;
+	font-family: 'Raleway', sans-serif;
+}
+
+/*password for register*/
+#regpw {
+	display: block;
+	text-align: center;
+	width: 65%;
+	margin: auto;
+	margin-bottom: 4%;
+	font-family: 'Raleway', sans-serif;
+
+}
+
+.button2 {
+	background-color: #cf575f;
+	color: #fff;
+	font-family: 'Raleway', sans-serif;
+}
+
+/*same as id */
+.form-control {
+	border-radius: 0px;
+}
+
+.btn {
+	border-radius: 0px;
+}
+
+h4 h6 {
+	font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+	font-size: 70px;
+	color: green;
+	display: inline-block;
+	font-family: 'Montserrat', sans-serif;
+}
+
 
